// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categoryPath is considered an internal link 1`] = `
<mockConstructor
  to="/integrations/category/123/my-item-title"
>
  My Item Title
</mockConstructor>
`;

exports[`providerPath is considered an internal link 1`] = `
<mockConstructor
  to="/integrations/provider/123/my-item-title"
>
  My Item Title
</mockConstructor>
`;

exports[`templatePath is considered an internal link 1`] = `
<mockConstructor
  to="/integrations/456/my-integration-title"
>
  My Item Title
</mockConstructor>
`;
